--- a/src/main/resources/org/jenkinsci/plugins/zap/ZAPBuilder/config.properties
+++ b/src/main/resources/org/jenkinsci/plugins/zap/ZAPBuilder/config.properties
@@ -1,7 +1,12 @@
 StuffA=Hello
 StuffB=World
 StuffC=!
-SourceDetails=Source Details
+StuffD=Something
+SourceDetailsA=Source Details A - Full Table - No help file for Title
+SourceDetailsB=Source Details B - Hybrid Element + Table combo using % and px for column widths
+SourceDetailsC=Source Details C - Self Added Help
+SourceDetailsD=Source Details D - Hybrid Element + Table combo using % and px for column widths, AUTO generated help file reference
+SourceDetailsE=Source Details E - Nested Element in a Table: Auto generated
 Title=Title
 ScanDate=Scan Date
 ScanVersion=Scan Version
