Finished Tables and added help file internationalization

--- a/src/main/resources/org/jenkinsci/plugins/zap/ZAPBuilder/config.properties
+++ b/src/main/resources/org/jenkinsci/plugins/zap/ZAPBuilder/config.properties
@@ -1,15 +1,23 @@
-StuffA=Hello
+StufTranslationTestBfA=Hello
 StuffB=World
 StuffC=!
 StuffD=Something
-SourceDetailsA=Source Details A - Full Table - No help file for Title
-SourceDetailsB=Source Details B - Hybrid Element + Table combo using % and px for column widths
-SourceDetailsC=Source Details C - Self Added Help
-SourceDetailsD=Source Details D - Hybrid Element + Table combo using % and px for column widths, AUTO generated help file reference
-SourceDetailsE=Source Details E - Nested Element in a Table: Auto generated
+SourceDetailsA=Source Details A - [FAILURE] Full Table - No help file for Title
+SourceDetailsB=Source Details B - [SUCCESS] Hybrid Element + Table combo using % and px for column widths
+SourceDetailsC=Source Details C - [FAILURE] Self Added Help
+SourceDetailsD=Source Details D - [SUCCESS] Hybrid Element + Table combo using % and px for column widths, AUTO generated help file reference
+SourceDetailsE=Source Details E - [FAILURE] Nested Element in a Table: Auto generated
+SourceDetailsF=Source Details F - [SUCCESS] 2x f:entry in one row - % WIDTH
+SourceDetailsF2=Source Details F2 - [FAILURE] 2x f:entry in one row - PIXEL WIDTH BREAKS
+SourceDetailsG=Source Details G - Full table attempt - PART 1
+SourceDetailsH=Source Details H - Full table attempt with Formatting - PART 2 CAN'T USE PX
+SourceDetailsI=Source Details I - [SUCCESS] Full table attempt with Formatting - PART 3
+SourceDetailsJ=Source Details J Compare - D vs I comparison (J is actually a copy of D, just here for a better comparison)
 Title=Title
-ScanDate=Scan Date
+ScanDate=Scan Date\t
 ScanVersion=Scan Version
 ReportDate=Report Date
 ReportVersion=Report Version
 Description=Description
+TranslationTestA=English A
+TranslationTestB=English B
